# GutsHackathonTeam26

./: .env.example  .gitignore  .prettierrc  Dockerfile  Makefile  README.md  app.py  auth.py  docker-compose-local-launch.yml  docker-compose-local.yml  docker-compose.yml  gutsHack.csv  locationinfo.csv  manage.py  models.py  output.csv  package-lock.json  package.json  pyproject.toml
NightOutRecommender/: Create Event.bru  DeleteEvents.bru  Get Me Events.bru  Get Me.bru  Get locations for event.bru  Register.bru  Token Gen.bru  bruno.json
NightOutRecommender/Local/: Add attendees.bru  Create Event.bru  Get Me Events attendees.bru  Get Me Events.bru  Get Me.bru  Get loc for event ranked.bru  Get loc for event1.bru  Get locations for event.bru  Rank Location.bru  Register.bru  Users.bru  folder.bru
NightOutRecommender/Remote/: Create Event.bru  DeleteEvents.bru  Get Me Events attendees.bru  Get Me Events.bru  Get loc for event.bru  Get locations for event.bru  Register.bru  Token Gen.bru  folder.bru
NightOutRecommender/environments/: Default.bru
backend/: app.py  auth.py  database.py  events.py  keywords.py  locations.py  models.py  pop_dummy_db_test.py  result.py  teamLeaderSetUp.py
backend/migrations/: 001_initial_schema.postgresql.sql  001_initial_schema.sqlite.sql  002_seed_locations.postgresql.sql  002_seed_locations.sqlite.sql  (+9 more)
data/: migration_log_test.db
guts-template/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.js
nightout_recommender_proj/: asgi.py  settings.py  urls.py  wsgi.py
(+37 files in other folders)
