[project]
name = "gutshackathonteam26"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi>=0.120.0",
    "psycopg2-binary>=2.9.11",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.38.0",
]
